.kubernetes/kubernetes_ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: fakebook
spec:
  rules:
  - host: fakebook.revaturelabs.com
    http:
      paths:
      - backend:
          serviceName: fakebook-posts-api
          servicePort: 80
        path: /api/posts
      - backend:
          serviceName: fakebook-posts-api
          servicePort: 80
        path: /api/comments
      - backend:
          serviceName: fakebook-posts-api
          servicePort: 80
        path: /api/follows
      - backend:
          serviceName: fakebook-notifications-api
          servicePort: 80
        path: /notifications
      - backend:
          serviceName: fakebook-spa
          servicePort: 80
        path: /
      - backend:
          serviceName: fakebook-profile-api
          servicePort: 80
        path: /api/profiles
      - backend:
          serviceName: fakebook-profile-api
          servicePort: 80
        path: /api/profilepicture
  tls:
  - hosts:
    - fakebook.revaturelabs.com
    secretName: fakebook-tls

# https://docs.microsoft.com/en-us/azure/aks/ingress-static-ip

# (group is the aks-created one)
# az network public-ip create -g mc_nick-escalona-945-p3_fakebook_eastus -n fakebook-public-ip --sku Standard --allocation-method static --query publicIp.ipAddress -o tsv
# (output 52.152.144.110)

# helm install fakebook-ingress ingress-nginx/ingress-nginx \
#     --set controller.replicaCount=2 \
#     --set controller.nodeSelector."beta\.kubernetes\.io/os"=linux \
#     --set defaultBackend.nodeSelector."beta\.kubernetes\.io/os"=linux \
#     --set controller.admissionWebhooks.patch.nodeSelector."beta\.kubernetes\.io/os"=linux \
#     --set controller.service.loadBalancerIP="52.152.144.110"
